feat: cancel tour star